# lawtax_chatbot

./: .gitignore  law_crawler.ipynb  pyproject.toml
app/: config.py  main.py  mongo_conn.py
app/modules/: vector_store.py  workflow.py
