[tool.poetry]
name = "lawtax"
version = "0.1.0"
description = ""
authors = ["Songjae Lee"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"
pymongo = "^4.11.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
